# CppCMakeVcpkgTemplate

./: CMakeLists.txt  CMakePresets-org.json  CMakePresets.json
src/: vgmain.cpp
